--- a/web/testWeb1/login1.html
+++ b/web/testWeb1/login1.html
@@ -1,10 +1,13 @@
 <html>
 <head><title></title></head>
 <body>
-    <form action="localhost:9090/" method="post">
+    <form method="post">
         用户名：<input type="text" name="username">
         密  码：<input type="text" name="password">
         <input type="submit" value="登录">
     </form>
+    <a href="http://localhost:9090/register">
+        <button>注册</button>
+    </a>
 </body>
 </html>
